fix: harden cli contract validation